Upgrade to the latest pnc-api snapshot